# crank-nicolson-tdse-1d

./: CMakeLists.txt  Makefile  README.md  cn_tdse.cc  plot.py
src/: BaseComputationScheme.cpp  BaseComputationScheme.hpp  CMakeLists.txt  Constants.hpp  Files.hpp  Grid.hpp  IComputationScheme.hpp  InitWave.cpp  InitWave.hpp  Potential.hpp  TDMA.hpp  TDSEComputationScheme.cpp  TDSEComputationScheme.hpp  TISEComputationScheme.cpp  TISEComputationScheme.hpp  TISEExactDiagonalization.cpp  TISEExactDiagonalization.hpp  TISEImaginaryTimeProp.cpp  TISEImaginaryTimeProp.hpp  Wavefunc.hpp  main.cpp
src/initWave/: InitWaveFromFile.hpp  InitWaveGaussian.hpp  InitWaveRandom.hpp
src/potential/: FieldSin2.hpp  PotentialComplexAbsorption.hpp  PotentialComposition.hpp  PotentialFreeParticle.hpp  PotentialHarmonicOscillator.hpp  PotentialSoftCore.hpp
