cmake_minimum_required (VERSION 3.7)
set (CMAKE_C_STANDARD 14)
set (CMAKE_CXX_STANDARD 14)
if (NOT CMAKE_BUILD_TYPE)
  set (CMAKE_BUILD_TYPE Release)
endif ()
set (CMAKE_CXX_FLAGS "-Wall -Wextra")
set (CMAKE_CXX_FLAGS_DEBUG "-g")
set (CMAKE_CXX_FLAGS_RELEASE "-O3")
project (Crank-Nicolson-TDSE-1D)
include_directories("${PROJECT_SOURCE_DIR}/src")
add_subdirectory(src)
add_subdirectory(bin)
